Fix border images not showing

--- a/client/src/app/game/actions/actions.module.scss
+++ b/client/src/app/game/actions/actions.module.scss
@@ -20,7 +20,7 @@
 	border-image-slice: 30;
 	border-image-width: 20px;
 	border-image-repeat: stretch stretch;
-	border-image-source: url('images/game/border_frame.png');
+	border-image-source: url('/images/game/border_frame.png');
 	border-style: solid;
 
 	> h2 {
