--- a/client/src/app/game/board/board.module.scss
+++ b/client/src/app/game/board/board.module.scss
@@ -26,7 +26,7 @@ $grid-size: 25px;
 	border-image-slice: 30;
 	border-image-width: 20px;
 	border-image-repeat: stretch stretch;
-	border-image-source: url('images/game/border_frame.png');
+	border-image-source: url('/images/game/border_frame.png');
 	border-style: solid;
 	padding: 20px;
 }
@@ -223,7 +223,7 @@ $grid-size: 25px;
 	right: 33px;
 	top: 20px;
 	width: 22px;
-	background: url(/images/status/bad-omen.png) no-repeat;
+	background: url('/images/status/bad-omen.png') no-repeat;
 	height: 22px;
 	background-size: contain;
 }
